# AutoApply

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  init_autoapply.sh  pyproject.toml
app/: main.py
app/core/: form_filler.py  local_storage.py  pdf_parser.py  verification.py
app/services/: huggingface_integration.py
app/utils/: config.py  exceptions.py  helpers.py  logging.py
tests/integration/: test_core_integration.py  test_huggingface_integration.py
tests/unit/: test_config.py  test_form_filler.py  test_helpers.py  test_logging.py  test_pdf_parser.py  test_storage.py  test_verification.py
